--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^3.1.0",
     "viem": "^1.19.9",
     "wagmi": "^1.4.7"
   },
