--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,9 @@
     ],
     "paths": {
       "@/*": ["./app/*"]
-    }
+    },
+    "types": ["node", "hardhat"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "hardhat.config.ts", "scripts/**/*.ts"],
   "exclude": ["node_modules"]
 } 
