--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     },
     "types": ["node", "hardhat"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "hardhat.config.ts", "scripts/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "hardhat.config.ts", "scripts/**/*.ts", "types/**/*.d.ts"],
   "exclude": ["node_modules"]
 } 
