--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "generate-types": "hardhat typechain"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.0.11",
-    "@tanstack/react-query": "^4.36.1",
+    "@heroicons/react": "^2.2.0",
+    "@rainbow-me/rainbowkit": "^2.2.4",
+    "@safe-global/safe-apps-sdk": "^9.1.0",
+    "@tanstack/react-query": "^5.71.5",
+    "@wagmi/core": "^2.16.7",
     "ethers": "^6.7.0",
     "next": "14.1.0",
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.1.0",
-    "viem": "^1.19.9",
-    "wagmi": "^1.4.7"
+    "viem": "^2.25.0",
+    "wagmi": "^2.14.16"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
@@ -35,7 +38,7 @@
     "@openzeppelin/contracts": "^4.9.3",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
-    "@types/node": "^20",
+    "@types/node": "^20.17.30",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
