--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.71.5",
     "@wagmi/core": "^2.16.7",
+    "clsx": "^2.0.0",
     "ethers": "^6.7.0",
+    "lucide-react": "^0.487.0",
     "next": "14.1.0",
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^1.14.0",
     "viem": "^2.25.0",
     "wagmi": "^2.14.16"
   },
@@ -36,6 +39,7 @@
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@openzeppelin/contracts": "^4.9.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/node": "^20.17.30",
@@ -50,6 +54,7 @@
     "postcss": "^8",
     "solidity-coverage": "^0.8.0",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.0",
     "typescript": "^5"
