--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@safe-global/safe-apps-sdk": "^9.1.0",
     "@tanstack/react-query": "^5.71.5",
     "@wagmi/core": "^2.16.7",
+    "@walletconnect/ethereum-provider": "^2.19.2",
+    "@walletconnect/modal": "^2.7.0",
     "clsx": "^2.0.0",
     "ethers": "^6.7.0",
     "lucide-react": "^0.487.0",
@@ -42,7 +44,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
-    "@types/node": "^20.17.30",
+    "@types/node": "^22.14.0",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -57,7 +59,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.0",
-    "typescript": "^5"
+    "typescript": "^5.8.2"
   },
   "packageManager": "pnpm@9.14.4",
   "engines": {
