--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "uos-finance",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.14.4",
+  "engines": {
+    "node": "18.17.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "hardhat compile && next build",
@@ -44,7 +48,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
-    "@types/node": "^22.14.0",
+    "@types/node": "^20.17.30",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -60,9 +64,5 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.3.0",
     "typescript": "^5.8.2"
-  },
-  "packageManager": "pnpm@9.14.4",
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
