--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Base Network RPC URL
 BASE_RPC_URL=https://mainnet.base.org
+BASE_TESTNET_RPC_URL=https://sepolia.base.org
 
 # Your wallet private key for contract deployment
 PRIVATE_KEY=your_private_key_here
@@ -10,7 +11,29 @@ BASESCAN_API_KEY=your_basescan_api_key_here
 # WalletConnect Project ID
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your_walletconnect_project_id_here
 
-# Token Addresses
-LP_TOKEN_ADDRESS=0x... # uOS-WETH LP token address
-UOS_TOKEN_ADDRESS=0x... # uOS token address
-STAKING_REWARDS_ADDRESS=0x... # Deployed StakingRewards contract address 
+# DEVELOPMENT ENVIRONMENT
+# For local testing, use these dummy addresses or deploy contracts locally
+# For local development (hardhat network)
+NEXT_PUBLIC_UOS_TOKEN_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
+NEXT_PUBLIC_LP_TOKEN_ADDRESS=0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+NEXT_PUBLIC_STAKING_REWARDS_ADDRESS=0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
+
+# PRODUCTION ENVIRONMENT
+# For live testing on testnet/mainnet, replace these with actual deployed contract addresses
+# Base Sepolia Testnet
+# NEXT_PUBLIC_UOS_TOKEN_ADDRESS=0x... # Actual deployed UOS token address
+# NEXT_PUBLIC_LP_TOKEN_ADDRESS=0x... # Actual deployed LP token address
+# NEXT_PUBLIC_STAKING_REWARDS_ADDRESS=0x... # Actual deployed StakingRewards address
+
+# Base Mainnet 
+# NEXT_PUBLIC_UOS_TOKEN_ADDRESS=0x... # Actual deployed UOS token address
+# NEXT_PUBLIC_LP_TOKEN_ADDRESS=0x... # Actual deployed LP token address
+# NEXT_PUBLIC_STAKING_REWARDS_ADDRESS=0x... # Actual deployed StakingRewards address
+
+# Use NEXT_PUBLIC_CHAIN_ID to specify which network to connect to
+# 1 = Ethereum Mainnet
+# 8453 = Base
+# 84532 = Base Sepolia
+# 31337 = Hardhat Local Node
+NEXT_PUBLIC_CHAIN_ID=31337
+
