Fix: Update Solidity compiler version and remove contract compilation from build process

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "hardhat compile && next build",
+    "build": "next build",
+    "build:contracts": "hardhat compile && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "hardhat test",
