--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,10 @@ NEXT_PUBLIC_STAKING_REWARDS_ADDRESS=0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0
 # PRODUCTION ENVIRONMENT
 # For live testing on testnet/mainnet, replace these with actual deployed contract addresses
 # Base Sepolia Testnet
-# NEXT_PUBLIC_UOS_TOKEN_ADDRESS=0x... # Actual deployed UOS token address
-# NEXT_PUBLIC_LP_TOKEN_ADDRESS=0x... # Actual deployed LP token address
-# NEXT_PUBLIC_STAKING_REWARDS_ADDRESS=0x... # Actual deployed StakingRewards address
+NEXT_PUBLIC_UOS_TOKEN_ADDRESS=0xffC8B69CB5AdD5Ea25E371eB531D9727bCc27d9C # UOS token address
+NEXT_PUBLIC_LP_TOKEN_ADDRESS=0x61bbA7C573248Cc3CcE194E9F48d8396f5A7A9A5 # LP token address
+NEXT_PUBLIC_STAKING_REWARDS_ADDRESS=0x3CB6D1F4AF8b663118ce473059Cfd9e90eBebD2E # StakingRewards address
+NEXT_PUBLIC_REWARD_TOKEN_ADDRESS=0xffC8B69CB5AdD5Ea25E371eB531D9727bCc27d9C # Same as UOS token address
 
 # Base Mainnet 
 # NEXT_PUBLIC_UOS_TOKEN_ADDRESS=0x... # Actual deployed UOS token address
