Update title to 'uOS Liquidity Incentive Program'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "uOS Aerodrome V2 LP Staking",
+  "name": "uOS Liquidity Incentive Program",
   "short_name": "uOS Staking",
   "description": "Stake uOS/ETH liquidity tokens, earn $uOS rewards",
   "start_url": "/",
